# allegro-beef

./: .gitignore  .gitmodules  BeefProj.toml  BeefSpace.toml  BeefSpace_User.toml  CMakeLists.txt  build.sh  build.ts  package.json
allegro_acodec/: BeefProj.toml
allegro_acodec/libs/: allegro_acodec-static.lib
allegro_acodec/libs/windows/: allegro_acodec-debug-static.lib  allegro_acodec-static.lib
allegro_acodec/src/: allegro_acodec.bf
allegro_audio/: BeefProj.toml
allegro_audio/libs/: allegro_audio-static.lib
allegro_audio/libs/windows/: allegro_audio-debug-static.lib  allegro_audio-static.lib
allegro_audio/src/: allegro_audio.bf
allegro_color/: BeefProj.toml
allegro_color/libs/: allegro_color-static.lib
allegro_color/libs/windows/: allegro_color-debug-static.lib  allegro_color-static.lib
allegro_color/src/: allegro_color.bf
allegro_font/: BeefProj.toml
allegro_font/libs/: allegro_font-static.lib
allegro_font/libs/windows/: allegro_font-static.lib  (+1 more)
allegro_font/src/: allegro_font.bf
allegro_image/: BeefProj.toml
allegro_image/libs/: allegro_image-static.lib
allegro_image/src/: allegro_image.bf
allegro_memfile/: BeefProj.toml
allegro_memfile/libs/: allegro_memfile-static.lib
allegro_memfile/src/: allegro_memfile.bf
allegro_native_dialog/: BeefProj.toml
allegro_native_dialog/libs/: allegro_dialog-static.lib
allegro_native_dialog/src/: allegro_native_dialog.bf
allegro_physfs/: BeefProj.toml
allegro_primitives/: BeefProj.toml
allegro_primitives/libs/: allegro_primitives-static.lib
allegro_primitives/src/: allegro_primitives.bf
example/: BeefProj.toml
example/src/: Program.bf
libs/windows/: allegro-static.lib
src/: alcompat.bf  allegro.bf  allegro_android.bf  allegro_direct3d.bf  allegro_iphone.bf  allegro_iphone_objc.bf  allegro_opengl.bf  allegro_osx.bf  allegro_windows.bf  allegro_x.bf  altime.bf  base.bf  bitmap.bf  bitmap_draw.bf  bitmap_io.bf  bitmap_lock.bf  blender.bf  clipboard.bf  color.bf  config.bf  cpu.bf  debug.bf  display.bf  drawing.bf  error.bf  events.bf  file.bf  fixed.bf  fmaths.bf  fshook.bf  fullscreen_mode.bf  haptic.bf  joystick.bf  keyboard.bf  keycodes.bf  memory.bf  monitor.bf  mouse.bf  mouse_cursor.bf  path.bf  (+9 more)
(+25 files in other folders)
